<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- home_page strings -->

	<string name="app_name">Page 1</string>
<!--	<string name="ek_img_content">ExportKit Image</string>-->
	<string name="exp__12_12_2024_string">Exp: 12/12/2024</string>
	<string name="floyd_nguyen_string">Floyd Nguyen</string>
	<string name="id__503882_string">ID: 503882</string>
	<string name="healthypal_string">HealthyPal</string>
	<string name="hcm___nguyen_van_linh_string">HCM - Nguyen Van Linh</string>
	<string name="healthypal_ek1_string">HealthyPal</string>
	<string name="day__10_15_string">Day: 10/15</string>
	<string name="membership_string">Membership</string>
	<string name="callender_string">Callender</string>
	<string name="referal_string">Referal</string>
	<string name="extensions_string">Extensions</string>
	<string name="special_offers_string">Special Offers</string>
	<string name="home_ek1_string">Home</string>
	<string name="home_ek2_string">Home</string>
	<string name="home_ek3_string">Home</string>
	<string name="heath_string">Heath</string>
	<string name="activity_string">Activity</string>
	<string name="welcome______string">Welcome !!!!</string>
	<string name="email_or_phone_string">Email or Phone</string>
	<string name="password_string">Password</string>
	<string name="_register_now_string">REGISTER NOW</string>
	<string name="login_ek3_string">Login</string>
	<string name="__userid_string">01234568985</string>
	<string name="__userpass_string">******</string>
	<string name="healthypal_ek2_string">HealthyPal</string>
	<string name="healthypal_ek3_string">HealthyPal</string>
	<string name="_1900_1111_string">1900.1111</string>
	<string name="healthypal_ek4_string">HealthyPal</string>
	<string name="training_plan_string">Training Plan</string>
	<string name="next_string">Next</string>
	<string name="before_starting_your_training_plan__please_tell_us_your_physical_health_condition__string">Before starting your training plan, please tell us your physical health condition.</string>
	<string name="select_your_injury_or_pain__string">Select Your Injury or Pain:</string>
	<string name="knee_pain_string">Knee Pain</string>
	<string name="back_pain_string">Back Pain</string>
	<string name="gape_neck_pain_string">Gape Neck Pain</string>
	<string name="headache_string">Headache</string>
	<string name="ankle_pain_string">Ankle Pain</string>
	<string name="wrist_pain_string">Wrist Pain</string>
	<string name="elbow_pain_string">Elbow Pain</string>
	<string name="healthypal_ek5_string">HealthyPal</string>
	<string name="what_do_you_want_to_achieve___string">What do you want to achieve ?</string>
	<string name="fat_loss_string">Fat Loss</string>
	<string name="muscle_gain_string">Muscle Gain</string>
	<string name="relieve_pain_string">Relieve Pain</string>
	<string name="overall_fitness_string">Overall Fitness</string>
	<string name="_1_string">1</string>
	<string name="_3_string">3</string>
	<string name="_5_string">5</string>
	<string name="_7_string">7</string>
	<string name="_8_string">8</string>
	<string name="_15_string">15</string>
	<string name="_16_string">16</string>
	<string name="_17_string">17</string>
	<string name="_18_string">18</string>
	<string name="_19_string">19</string>
	<string name="_20_string">20</string>
	<string name="_21_string">21</string>
	<string name="_22_string">22</string>
	<string name="_29_string">29</string>
	<string name="_30_string">30</string>
	<string name="_31_string">31</string>
	<string name="_23_string">23</string>
	<string name="_24_string">24</string>
	<string name="_25_string">25</string>
	<string name="_26_string">26</string>
	<string name="_27_string">27</string>
	<string name="_28_string">28</string>
	<string name="_11_string">11</string>
	<string name="_10_string">10</string>
	<string name="_13_string">13</string>
	<string name="_14_string">14</string>
	<string name="_2_string">2</string>
	<string name="_4_string">4</string>
	<string name="_6_string">6</string>
	<string name="_9_string">9</string>
	<string name="_12_string">12</string>
	<string name="fat_loss__let_s_burn__string">Fat Loss, lets burn!</string>
	<string name="your_bmi_is_28___calories_out___2100_cals_string">Your BMI is 28 -  Calories Out :  2100 cals                         </string>
	<string name="april_15__2024_warm_up_run_02_km_string">April 15, 2024Warm UpRun 02 km</string>
	<string name="april_15__2024_jump_jack_30_reps___5_sets__30_sec_rest_string">April 15, 2024Jump Jack30 reps - 5 sets, 30 sec rest</string>
	<string name="april_15__2024_plank_1_min___4_sets__15_sec_rest_string">April 15, 2024Plank1 min - 4 sets, 15 sec rest</string>
	<string name="april_15__2024_warm_up_run_02_km_ek1_string">April 15, 2024Warm UpRun 02 km</string>
	<string name="run_time___string">Run Time !</string>
	<string name="_2_3_string">2.3</string>
	<string name="_11_00_string">11:00</string>
	<string name="_30_33_string">30:33</string>
	<string name="_345_string">345</string>
	<string name="km_string">Km</string>
	<string name="start_string">Start</string>
	<string name="time_ek10_string">Time</string>
	<string name="calories_string">Calories</string>
	<string name="april_15__2024_jump_jack_30_reps___5_sets__30_sec_rest_ek1_string">April 15, 2024Jump Jack30 reps - 5 sets, 30 sec rest</string>
	<string name="start___string">Start !</string>
	<string name="_00_30_string">00:30</string>
	<string name="_2_ek1_string">2</string>
	<string name="rep_string">Rep</string>
	<string name="_56_string">56</string>
	<string name="calories_ek1_string">Calories</string>
	<string name="pause_string">Pause</string>
	<string name="go_string">Go</string>
	<string name="video_tutorial_string">Video Tutorial</string>
	<string name="april_15__2024_jump_jack_30_reps___5_sets__30_sec_rest_ek2_string">April 15, 2024Jump Jack30 reps - 5 sets, 30 sec rest</string>
	<string name="video_tutorial_ek1_string">Video Tutorial</string>
	<string name="how_to_do_a_jumping_jack___proper_form___technique_string">How to do a Jumping Jack | Proper Form &amp; Technique</string>
	<string name="jump_jack___cardio_string">Jump Jack - Cardio</string>
	<string name="a_jumping_jack__also_known_as_a_star_jump_and_called_a_side_straddle_hop_in_the_us_military__is_a_physical_jumping_exercise_performed_by_jumping_to_a_position_with_the_legs_spread_wide_and_the_hands_going_overhead__sometimes_in_a_clap__and_then_returning_to_a_position_with_the_feet_together_and_the_arms_at_the_sides__string">Ajumping jack, also known as astar jumpand called aside-straddle hopin the US military, is a physical jumpingexerciseperformed byjumpingto a position with thelegsspread wide and thehandsgoing overhead, sometimes in a clap, and then returning to a position with thefeettogether and thearmsat the sides.</string>
	<string name="healthypal_ek6_string">HealthyPal</string>
	<string name="your_info_string">Your Info</string>
	<string name="email_or_phone_ek1_string">Email or Phone</string>
	<string name="full_name_string">Full Name</string>
	<string name="next_ek1_string">Next</string>
	<string name="password_ek1_string">Password</string>
	<string name="confirm_password_string">Confirm Password</string>
	<string name="healthypal_ek7_string">HealthyPal</string>
	<string name="bmi_calculator_string">BMI Calculator</string>
	<string name="weight_string">Weight</string>
	<string name="height_string">Height</string>
	<string name="register_string">Register</string>
	<string name="age_string">Age</string>
	<string name="sex_string">Sex</string>
	<string name="current_bmi___28_string">Current BMI : 28</string>
	<string name="last_updated_string">LAST UPDATED</string>
	<string name="daily_calogies_in__1890_string">Daily calogies in: 1890</string>
	<string name="daily_calogies_out__2100_string">Daily calogies out: 2100</string>
	<string name="update_your_bmi_string">Update your BMI</string>
	<string name="share_the_app_string">Share the App</string>
	<string name="start_your_project_string">Start your Project</string>
	<string name="your_current_bmi___28_string">Your current BMI : 28</string>
	<string name="your_daily_calogies_in__1890_string">Your daily calogies in: 1890</string>
	<string name="your_daily_calogies_out__2100_string">Your daily calogies out: 2100</string>
	<string name="exercise_explore_string">ExerciseExplore</string>
	<string name="meal_explore_string">Meal Explore</string>


	<string name="breakfast_meal_string">Breakfast meal</string>
	<string name="lunch_meal_string">Lunch meal</string>
	<string name="dinner_meal_string">Dinner meal</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="_healthypal_string">HealthyPal</string>
	<string name="your_meal_today___string">Your meal today !</string>
	<string name="start_your_workout_string">Start your workout</string>


</resources>
