<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/login" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_marginTop="-60dp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_login_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__login_ek2"
					android:background="@drawable/_bg__login_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="922dp" />

				<View   android:id="@+id/_rectangle_15"
					android:background="@drawable/_rectangle_15_shape"
					 android:layout_marginStart="36dp"
					android:layout_marginTop="506dp"
					android:layout_width="346dp"
					android:layout_height="51dp" />

				<TextView android:id="@+id/welcome_____"
					android:textSize="40sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="172dp"
					android:layout_width="282dp"
					android:layout_height="119dp"
					android:text="@string/welcome______string"
					 />

				<TextView android:id="@+id/email_or_phone"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="281dp"
					android:layout_width="233dp"
					android:layout_height="67dp"
					android:text="@string/email_or_phone_string"
					 />

				<TextView android:id="@+id/password"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="375dp"
					android:layout_width="233dp"
					android:layout_height="67dp"
					android:text="@string/password_string"
					 />

				<TextView android:id="@+id/_register_now"
					android:textSize="20sp"
					android:textColor="@color/rectangle_11_color"
					android:layout_marginLeft="38dp"
					android:layout_marginTop="581dp"
					android:layout_width="233dp"
					android:layout_height="67dp"
					android:text="@string/_register_now_string"
					 />

				<TextView android:id="@+id/login_ek3"
					android:textSize="20sp"
					android:textColor="@color/_bg__home_page_ek2_color"
					android:layout_marginLeft="179dp"
					android:layout_marginTop="504dp"
					android:layout_width="76dp"
					android:layout_height="67dp"
					android:text="@string/login_ek3_string"
					 />

				<View   android:id="@+id/line_1"
					android:background="@drawable/line_1_shape"
					 android:layout_marginStart="36dp"
					android:layout_marginTop="360dp"
					android:layout_width="347dp"
					android:layout_height="1dp" />

				<EditText android:id="@+id/__userid"
					android:inputType=""
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="334dp"
					android:layout_width="316dp"
					android:layout_height="43dp"
					android:text="@string/__userid_string"
					 />

				<View   android:id="@+id/line_2"
					android:background="@drawable/line_2_shape"
					 android:layout_marginStart="36dp"
					android:layout_marginTop="452dp"
					android:layout_width="347dp"
					android:layout_height="1dp" />

				<EditText android:id="@+id/__userpass"
					android:inputType="textPassword"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="36dp"
					android:layout_marginTop="428dp"
					android:layout_width="207dp"
					android:layout_height="40dp"
					android:text="@string/__userpass_string"
					 />

				<ImageView android:id="@+id/circle_ek1"
					android:src="@drawable/circle_ek1"
					android:contentDescription="circle_ek1"
					 android:layout_marginStart="171dp"
					android:layout_marginTop="82dp"
					android:layout_width="75dp"
					android:layout_height="75dp" />

				<ImageView android:id="@+id/training_ek1"
					android:src="@drawable/training_ek1"
					android:contentDescription="training_ek1"
					 android:layout_marginStart="191dp"
					android:layout_marginTop="87dp"
					android:layout_width="36dp"
					android:layout_height="38dp" />

				<TextView android:id="@+id/healthypal_ek2"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textColor="@color/healthypal_color"
					android:layout_marginLeft="173dp"
					android:layout_marginTop="125dp"
					android:layout_width="78dp"
					android:layout_height="28dp"
					android:text="@string/healthypal_ek2_string"
					 />

				<ImageView android:id="@+id/circle_ek2"
					android:src="@drawable/circle_ek2"
					android:contentDescription="circle_ek2"
					 android:layout_marginStart="171dp"
					android:layout_marginTop="82dp"
					android:layout_width="75dp"
					android:layout_height="75dp" />

				<ImageView android:id="@+id/training_ek2"
					android:src="@drawable/training_ek2"
					android:contentDescription="training_ek2"
					 android:layout_marginStart="191dp"
					android:layout_marginTop="94dp"
					android:layout_width="36dp"
					android:layout_height="38dp" />

				<TextView android:id="@+id/healthypal_ek3"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textColor="@color/healthypal_color"
					android:layout_marginLeft="173dp"
					android:layout_marginTop="130dp"
					android:layout_width="78dp"
					android:layout_height="28dp"
					android:text="@string/healthypal_ek3_string"
					 />

				<TextView android:id="@+id/_1900_1111"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="237dp"
					android:layout_marginTop="863dp"
					android:layout_width="209dp"
					android:layout_height="51dp"
					android:text="@string/_1900_1111_string"
					 />


			</RelativeLayout>






		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>