<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/user_page" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_marginTop="-60dp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__user_page"
				android:background="@drawable/_bg__user_page_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="411dp"
				android:layout_height="922dp" />

			<ImageView android:id="@+id/circle"
				android:src="@drawable/circle"
				android:contentDescription="circle"
				 android:layout_marginStart="310dp"
				android:layout_marginTop="65dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<ImageView android:id="@+id/training"
				android:src="@drawable/training"
				android:contentDescription="training"
				 android:layout_marginStart="330dp"
				android:layout_marginTop="74dp"
				android:layout_width="36dp"
				android:layout_height="38dp" />

			<TextView android:id="@+id/healthypal"
				android:fontFamily="Jua"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textColor="@color/healthypal_color"
				android:layout_marginLeft="314dp"
				android:layout_marginTop="112dp"
				android:layout_width="78dp"
				android:layout_height="28dp"
				android:text="@string/healthypal_string"
				 />

			<TextView android:id="@+id/day__10_15"
				android:fontFamily="Karla"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="12sp"
				android:textColor="@color/_bg__user_page_color"
				android:layout_marginLeft="256dp"
				android:layout_marginTop="352dp"
				android:layout_width="119dp"
				android:layout_height="31dp"
				android:text="@string/day__10_15_string"
				 />

			<TextView android:id="@+id/current_bmi___28"
				android:fontFamily="Jua"
				android:textSize="20sp"
				android:textColor="@color/current_bmi___28_color"
				android:layout_marginLeft="23dp"
				android:layout_marginTop="494dp"
				android:layout_width="233dp"
				android:layout_height="67dp"
				android:text="@string/current_bmi___28_string"
				 />

			<TextView android:id="@+id/last_updated"
				android:fontFamily="Jua"
				android:textSize="20sp"
				android:textColor="@color/current_bmi___28_color"
				android:layout_marginLeft="23dp"
				android:layout_marginTop="464dp"
				android:layout_width="233dp"
				android:layout_height="67dp"
				android:text="@string/last_updated_string"
				 />

			<TextView android:id="@+id/daily_calogies_in__1890"
				android:fontFamily="Jua"
				android:textSize="20sp"
				android:textColor="@color/current_bmi___28_color"
				android:layout_marginLeft="23dp"
				android:layout_marginTop="527dp"
				android:layout_width="325dp"
				android:layout_height="67dp"
				android:text="@string/daily_calogies_in__1890_string"
				 />

			<TextView android:id="@+id/daily_calogies_out__2100"
				android:fontFamily="Jua"
				android:textSize="20sp"
				android:textColor="@color/current_bmi___28_color"
				android:layout_marginLeft="25dp"
				android:layout_marginTop="557dp"
				android:layout_width="325dp"
				android:layout_height="67dp"
				android:text="@string/daily_calogies_out__2100_string"
				 />

			<View   android:id="@+id/rectangle_11"
				android:background="@drawable/rectangle_11_shape"
				 android:layout_marginStart="18dp"
				android:layout_marginTop="203dp"
				android:layout_width="378dp"
				android:layout_height="257dp" />

			<ImageView android:id="@+id/rectangle_12"
				android:src="@drawable/rectangle_12"
				android:contentDescription="rectangle_12"
				 android:layout_marginStart="250dp"
				android:layout_marginTop="218dp"
				android:layout_width="130dp"
				android:layout_height="130dp" />

			<TextView android:id="@+id/floyd_nguyen"
				android:fontFamily="Jua"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="28sp"
				android:textColor="@color/_bg__user_page_color"
				android:layout_marginLeft="15dp"
				android:layout_marginTop="354dp"
				android:layout_width="205dp"
				android:layout_height="55dp"
				android:text="@string/floyd_nguyen_string"
				 />

			<TextView android:id="@+id/id__503882"
				android:fontFamily="Jua"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/_bg__user_page_color"
				android:layout_marginLeft="22dp"
				android:layout_marginTop="384dp"
				android:layout_width="128dp"
				android:layout_height="60dp"
				android:text="@string/id__503882_string"
				 />

			<TextView android:id="@+id/hcm___nguyen_van_linh"
				android:fontFamily="Jua"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="15sp"
				android:textColor="@color/_bg__user_page_color"
				android:layout_marginLeft="35dp"
				android:layout_marginTop="235dp"
				android:layout_width="163dp"
				android:layout_height="48.5dp"
				android:text="@string/hcm___nguyen_van_linh_string"
				 />

			<TextView android:id="@+id/healthypal_ek1"
				android:fontFamily="Jua"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/healthypal_color"
				android:layout_marginLeft="-12dp"
				android:layout_marginTop="203dp"
				android:layout_width="202dp"
				android:layout_height="70dp"
				android:text="@string/healthypal_ek1_string"
				 />


			<RelativeLayout android:id="@+id/group_43"
				android:layout_marginTop="626dp"
				android:layout_marginStart="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/button"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_16"
						android:background="@drawable/rectangle_16_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="171dp"
						android:layout_height="75dp" />

					<TextView android:id="@+id/update_your_bmi"
						android:fontFamily="Jua"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="20sp"
						android:textColor="@color/_bg__user_page_color"
						android:layout_marginLeft="-3dp"
						android:layout_marginTop="0dp"
						android:layout_width="186dp"
						android:layout_height="84dp"
						android:text="@string/update_your_bmi_string"
						 />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_44"
				android:layout_marginTop="626dp"
				android:layout_marginStart="209dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/button_ek1"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_16_ek1"
						android:background="@drawable/rectangle_16_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="171dp"
						android:layout_height="75dp" />

					<TextView android:id="@+id/share_the_app"
						android:fontFamily="Jua"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="20sp"
						android:textColor="@color/_bg__user_page_color"
						android:layout_marginLeft="-3dp"
						android:layout_marginTop="0dp"
						android:layout_width="186dp"
						android:layout_height="84dp"
						android:text="@string/share_the_app_string"
						 />

				</RelativeLayout>

			</RelativeLayout>

			<ImageView android:id="@+id/left_arrow"
				android:src="@drawable/left_arrow"
				android:contentDescription="left_arrow"
				 android:layout_marginStart="48dp"
				android:layout_marginTop="97dp"
				android:layout_width="30dp"
				android:layout_height="30dp" />


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>