<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/bmi" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_marginTop="-60dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >









			<RelativeLayout android:id="@+id/page_bmi_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__bmi_ek2"
					android:background="@drawable/_bg__bmi_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="914dp" />

				<ImageView android:id="@+id/circle_ek6"
					android:src="@drawable/circle_ek6"
					android:contentDescription="circle_ek6"
					 android:layout_marginStart="309dp"
					android:layout_marginTop="92dp"
					android:layout_width="75dp"
					android:layout_height="75dp" />

				<ImageView android:id="@+id/training_ek6"
					android:src="@drawable/training_ek6"
					android:contentDescription="training_ek6"
					 android:layout_marginStart="329dp"
					android:layout_marginTop="101dp"
					android:layout_width="36dp"
					android:layout_height="38dp" />

				<TextView android:id="@+id/healthypal_ek7"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textColor="@color/healthypal_color"
					android:layout_marginLeft="309dp"
					android:layout_marginTop="139dp"
					android:layout_width="78dp"
					android:layout_height="28dp"
					android:text="@string/healthypal_ek7_string"
					 />

				<TextView android:id="@+id/bmi_calculator"
					android:textSize="40sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="46dp"
					android:layout_marginTop="170dp"
					android:layout_width="282dp"
					android:layout_height="119dp"
					android:text="@string/bmi_calculator_string"
					 />

				<View   android:id="@+id/_rectangle_16_ek1"
					android:background="@drawable/_rectangle_16_ek1_shape"
					 android:layout_marginStart="33dp"
					android:layout_marginTop="685dp"
					android:layout_width="346dp"
					android:layout_height="51dp" />

				<TextView android:id="@+id/weight"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="35dp"
					android:layout_marginTop="362dp"
					android:layout_width="233dp"
					android:layout_height="67dp"
					android:text="@string/weight_string"
					 />

				<TextView android:id="@+id/height"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="35dp"
					android:layout_marginTop="274dp"
					android:layout_width="233dp"
					android:layout_height="67dp"
					android:text="@string/height_string"
					 />

				<TextView android:id="@+id/register"
					android:textSize="20sp"
					android:textColor="@color/_bg__home_page_ek2_color"
					android:layout_marginLeft="170dp"
					android:layout_marginTop="684dp"
					android:layout_width="104dp"
					android:layout_height="67dp"
					android:text="@string/register_string"
					 />

				<View   android:id="@+id/line_3_ek1"
					android:background="@drawable/line_3_ek1_shape"
					 android:layout_marginStart="32dp"
					android:layout_marginTop="340dp"
					android:layout_width="347dp"
					android:layout_height="1dp" />

				<View   android:id="@+id/line_4_ek1"
					android:background="@drawable/line_4_ek1_shape"
					 android:layout_marginStart="32dp"
					android:layout_marginTop="431dp"
					android:layout_width="347dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/age"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="35dp"
					android:layout_marginTop="452dp"
					android:layout_width="233dp"
					android:layout_height="67dp"
					android:text="@string/age_string"
					 />

				<View   android:id="@+id/line_5_ek1"
					android:background="@drawable/line_5_ek1_shape"
					 android:layout_marginStart="32dp"
					android:layout_marginTop="522dp"
					android:layout_width="347dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/sex"
					android:textSize="20sp"
					android:textColor="@color/extensions_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="541dp"
					android:layout_width="233dp"
					android:layout_height="67dp"
					android:text="@string/sex_string"
					 />

				<View   android:id="@+id/line_6_ek1"
					android:background="@drawable/line_6_ek1_shape"
					 android:layout_marginStart="32dp"
					android:layout_marginTop="612dp"
					android:layout_width="347dp"
					android:layout_height="1dp" />

				<ImageView android:id="@+id/_left_arrow_ek1"
					android:src="@drawable/_left_arrow_ek1"
					android:contentDescription="_left_arrow_ek1"
					 android:layout_marginStart="52dp"
					android:layout_marginTop="109dp"
					android:layout_width="30dp"
					android:layout_height="30dp" />


			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>